# air

./: .gitignore  AIR_SKILL.md  README  README.md  README_.md  air.pir  out_app.py  pir_reconstructor.pir  pyproject.toml  setup.py
UNKNOWN.egg-info/: SOURCES.txt
air/: __init__.py  __main__.py
air/services/: __init__.py
air_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
example_pir/: 02-memanagement.pir  air.pir  cpp.pir  pirgen.pir  rust_learn.pir
ir规范/: os2.py  pir.txt  pirgen.py  project.pir
md/: CHANGELOG.md  README_CANON.md  README_RISCV.md  ir.md  spec.md  spec_v10.md  spec_v2.1.md  spec_v2.2.md  spec_v2.3.md  spec_v2.md  spec_v3.md  use.md  映射规范.md
pcegen/: pcegen.pir  pcegen.py  test.pcr  test_pir.py  test_resolve.py
pcegen/analyzers/: __init__.py  asm.py  base.py  c_fixed.py  c_part1.py  ld.py  python_extract_class.py
pcegen/config/: __init__.py  analyzer_config.py
pcegen/core/: extractor.py  pir_parser.py  serializer.py
pcegen/models/: resolved_ref.py
pir-reconstructor/: README.md  cli.py  cli_old.py  my_project.pir
pir-reconstructor/pir/: parser.py  validator.py
pir-reconstructor/reconstruct/: audit.py  enrichment.py  interface.py  pipeline.py  relations.py  structure.py
pir_reconstructor/: __init__.py  cli.py
pir_reconstructor/pir/: parser.py  validator.py
pir_reconstructor/reconstruct/: __init__.py  interface.py  layout.py  pipeline.py  relations.py  structure.py
pir_reconstructor/templates/: __init__.py  asm.py  c.py  java.py  ld.py  python.py
pir_reconstructor/utils/: hash.py  ordering.py
pir_reconstructor/writers/: graphviz_arch.py  graphviz_pipeline_old.py  plantuml.py
pirgen/: README_CACHE.md  README_PROFILE.md  README_PROFILES.md  debug.py  my_project.pir  pirgen.py  test_full.pcir  test_full.pcr
pirgen/analyzers/: __init__.py  asm_ld_analyzer.py  base.py  c_analyzer.py  java_analyzer.py  python_analyzer.py  rust_analyzer.py
pirgen/core/: __init__.py  analysis_cache.py  dep_canon.py  pir_builder.py  profile_canon.py  profile_riscv.py  project_model.py
re/.pir-metadata/: audit-report.md  output-hash.txt
re/diagrams/: architecture.dot  dependencies.mmd  dependencies.puml  modules.dot  pipeline.dot
re/docs/: README.md  api.md
re/src/: min_token.py  pirgen.py
services/: README.md  forward.py  peek.py  reverse.py
spec/: AI_PCR_GUIDE.md  ir.md  n_spec.md  pces.md  pcr.md  spec.md  映射规范_v2.md
talk/: 12.md  13.md  14.md  15.md  talk_1.md  talk_10.md  talk_11.md  talk_2.md  talk_3.md  talk_4.md  talk_5.md  talk_6.md  talk_7.md  talk_8.md  talk_8_optimized.md  talk_9.md
test_projects/: PROJECTS.md  README.md  t.pcir  t.pcr  test_projects.pir
test_projects/asm_project/: start.S
test_projects/c_project/: c.pcir  c.pcr  c_project.pir  calculator.c  calculator.h  main.c  utils.c  utils.h
test_projects/cpp_project/: calculator.cpp  calculator.h  main.cpp  project.pir  test.pcr  utils.cpp  utils.h
test_projects/cross_project/: c.pcir  c.pcr  c_module.c  check_all_parentheses.py  check_char.py  check_cpp_parentheses.py  check_parentheses.py  check_pos27.py  check_rust_parentheses.py  cross_project.pir  main.cpp  rust_module.rs
test_projects/os_project/: boot.S  mm.c  mm.h  project.pir  scheduler.c  scheduler.h  test.pcr
test_projects/python_project/: calculator.py  main.py  p.pcir  p.pcr  python_project.pir  utils.py
test_projects/rust_project/: calculator.rs  main.rs  r.pcir  r.pcr  rust_project.pir  utils.rs
tests/: __init__.py  test_asm_analyzer.py  test_c_analyzer.py  test_python_analyzer.py  test_rust_analyzer.py
初版/: canon_config1.py  daima.txt
(+17 files in other folders)
